--- a/source/_posts/记一次连接池泄露问题.md
+++ b/source/_posts/记一次连接池泄露问题.md
@@ -13,7 +13,7 @@ tags: 技术
 
 - 在mysql客户端执行 `show full processlist` ，发现连接数已经到达了最大连接数1000
     
-    ![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/3b9796b5-c447-43a1-a70c-e22d28fd4fb6/91be5c73-5afd-4138-a8c2-d9a22bbbcb6e/Untitled.png)
+    ![连接信息](/source/images/Untitled.webp)
     
     我们发现在这些连接中，有大量的sleep的连接，并且都指向同一台机器。接下来就随机找一个进程进行分析。此处选取 `172.168.30.91:19118`
     
